<resources>
    <string name="app_name">Marklist</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="signup">Sign In</string>
    <string name="logo">Logo</string>
    <string name="classs">Class :</string>
    <string name="section">Section :</string>
    <string name="open">Open</string>
    <string name="register">Register</string>
    <string name="examno">Exam No</string>
    <string-array name="classss">
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
        <item>IX</item>
        <item>X</item>
    </string-array>
    <string-array name="section">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>

</resources>