<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_light_light_blue"
    tools:context=".Mainmenu">


    <TextView
        android:id="@+id/top_box"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:background="@color/light_blue"
        android:text="@string/username"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classs"
        android:textColor="@color/dark_blue"
        android:textSize="44sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/top_box"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/class_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="@color/lightest_blue"
        app:layout_constraintTop_toBottomOf="@id/top_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/class_name"/>


    <TextView
        android:id="@+id/section_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/section"
        android:textSize="44sp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/class_name" />


    <Spinner
        android:id="@+id/section_spinner"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="50dp"
        android:entries="@array/section"
        android:background="@color/lightest_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/section_name"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:textSize="20sp"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="200dp"
        android:background="@drawable/button_background" />


</androidx.constraintlayout.widget.ConstraintLayout>